# PORTFOLIO

./: .gitattributes  .gitignore  CODE_EXAMPLES.md  README.md
projects/ampgen-configurator/: PORTFOLIO_README.md  package.json
projects/awd-transfer-case-tuner/: PORTFOLIO_README.md  README.md  pubspec.yaml
projects/bassclown-ecommerce/: PORTFOLIO_NOTES.md  package.json
projects/canflex-mobile-app/: PORTFOLIO_README.md  README.md  pubspec.yaml
projects/customer-tracking-crm/: .cpanel.yml  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  GODADDY_DEPLOYMENT_GUIDE.md  PORTFOLIO_README.md  README.md  app.js  deployment-instructions.md  package.json  server.js
projects/esp32-mouse-controller/: PORTFOLIO_NOTES.md  README.md  esp32_mouse_controller.ino  esp32_mouse_test.ino  mouse.py  mouse_controller_gui.py  requirements.txt
projects/geo-command-center/: README.md  (+5 more)
projects/turbolamik-awd-controller/firmware/components/awd_core/: CMakeLists.txt
projects/turbolamik-awd-controller/firmware/components/awd_core/include/: awd_types.h  ble_service.h  can_rx.h  derived_metrics.h  e90_profile_decoder.h  health_watchdog.h  raw_log_buffer.h  signal_store.h  turbolamik_decoder.h  vehicle_profile.h
projects/turbolamik-awd-controller/firmware/components/awd_core/src/: ble_service.c  can_rx.c  derived_metrics.c  e90_profile_decoder.c  health_watchdog.c  raw_log_buffer.c  signal_store.c  turbolamik_decoder.c  vehicle_profile.c
resume/: Matthew_Phillips_Harbinger_Software_Integration_Resume.md  Matthew_Phillips_Meyers_Manx_Resume.md  Matthew_Phillips_Resume.md  README.md
(+1451 files in other folders)
